Fix error in making tables wrap text where scroll bar was always showing on chrome

--- a/docsrc/source/_static/custom.css
+++ b/docsrc/source/_static/custom.css
@@ -3,10 +3,6 @@
 
 
 /* Make tables wrap text. Once it is impossible to wrap text, then scroll. */
-.wy-table-responsive {
-    overflow: scroll;
-}
-
 .wy-table-responsive table td {
     white-space: unset;
 }
